<resources>
    <string name="app_name">Crypto Converter</string>
    <string name="value">Value</string>
    <string name="convert_from">From:</string>
    <string name="convert_to">To:</string>
    <string name="convert">Convert</string>
    <string name="currency_symbol">currency symbol</string>
    <string name="twenty_four_hour" translatable="false">24H</string>
    <string name="up_arrow">Up arrow</string>
    <string name="down_arrow">Down arrow</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="about_text">Thank you for using Crypto Converter.\nIt is currently limited at 50 searches per hour. You will soon have an option to expand that limit.\nIf your favorite crypto isn\'t listed, please click below to e-mail the developer with any requests or suggestions.</string>
    <string name="email" translatable="false">Email</string>
    <string name="clear_history">Clear history</string>
    <string name="back_icon">Back icon</string>
    <string name="formatted_result" translatable="false">%.8f</string>
</resources>